// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render visible banner, with custom theme 1`] = `
<View
  collapsable={false}
  style={
    Object {
      "shadowColor": "#000",
      "shadowOffset": Object {
        "height": 1,
        "width": 0,
      },
      "shadowOpacity": 0.15,
      "shadowRadius": 3,
    }
  }
>
  <View
    collapsable={false}
    style={
      Object {
        "shadowColor": "#000",
        "shadowOffset": Object {
          "height": 1,
          "width": 0,
        },
        "shadowOpacity": 0.3,
        "shadowRadius": 1,
      }
    }
  >
    <View
      collapsable={false}
      style={
        Object {
          "backgroundColor": "rgb(247, 243, 249)",
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "alignSelf": "center",
              "maxWidth": 960,
              "overflow": "hidden",
              "width": "100%",
            },
            undefined,
          ]
        }
      >
        <View
          collapsable={false}
          style={
            Object {
              "height": 0,
            }
          }
        />
        <View
          collapsable={false}
          onLayout={[Function]}
          style={Object {}}
        >
          <View
            style={
              Object {
                "flexDirection": "row",
                "justifyContent": "flex-start",
                "marginBottom": 0,
                "marginHorizontal": 8,
                "marginTop": 16,
              }
            }
          >
            <Text
              accessibilityLiveRegion="polite"
              accessibilityRole="alert"
              style={
                Array [
                  Object {
                    "color": "rgba(28, 27, 31, 1)",
                  },
                  Object {
                    "textAlign": "left",
                  },
                  Array [
                    Object {
                      "flex": 1,
                      "margin": 8,
                    },
                    Object {
                      "color": "rgba(28, 27, 31, 1)",
                    },
                  ],
                ]
              }
            >
              Custom theme
            </Text>
          </View>
          <View
            style={
              Object {
                "flexDirection": "row",
                "justifyContent": "flex-end",
                "margin": 4,
              }
            }
          >
            <View
              collapsable={false}
              style={
                Object {
                  "shadowColor": "#000",
                  "shadowOffset": Object {
                    "height": 0,
                    "width": 0,
                  },
                  "shadowOpacity": 0,
                  "shadowRadius": 0,
                }
              }
            >
              <View
                collapsable={false}
                style={
                  Object {
                    "shadowColor": "#000",
                    "shadowOffset": Object {
                      "height": 0,
                      "width": 0,
                    },
                    "shadowOpacity": 0,
                    "shadowRadius": 0,
                  }
                }
              >
                <View
                  collapsable={false}
                  style={
                    Object {
                      "backgroundColor": "transparent",
                      "borderColor": "transparent",
                      "borderRadius": 20,
                      "borderStyle": "solid",
                      "borderWidth": 0,
                      "margin": 4,
                      "minWidth": "auto",
                    }
                  }
                >
                  <View
                    accessibilityRole="button"
                    accessibilityState={
                      Object {
                        "disabled": false,
                      }
                    }
                    accessible={true}
                    focusable={true}
                    onClick={[Function]}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      Array [
                        Object {
                          "overflow": "hidden",
                        },
                        Object {
                          "borderRadius": 20,
                        },
                      ]
                    }
                  >
                    <View
                      style={
                        Array [
                          Object {
                            "alignItems": "center",
                            "flexDirection": "row",
                            "justifyContent": "center",
                          },
                          undefined,
                        ]
                      }
                    >
                      <Text
                        numberOfLines={1}
                        selectable={false}
                        style={
                          Array [
                            Object {
                              "color": "rgba(28, 27, 31, 1)",
                              "fontSize": 14,
                              "fontWeight": "500",
                              "letterSpacing": 0.1,
                              "lineHeight": 20,
                            },
                            Object {
                              "textAlign": "left",
                            },
                            Object {
                              "writingDirection": "ltr",
                            },
                            Array [
                              Object {
                                "marginHorizontal": 16,
                                "marginVertical": 9,
                                "textAlign": "center",
                              },
                              false,
                              Object {
                                "marginHorizontal": 12,
                              },
                              Object {
                                "marginHorizontal": 8,
                              },
                              false,
                              Object {
                                "color": "#043",
                                "fontFamily": "System",
                                "fontSize": 14,
                                "fontWeight": "500",
                                "letterSpacing": 0.1,
                                "lineHeight": 20,
                              },
                              undefined,
                            ],
                          ]
                        }
                      >
                        first
                      </Text>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`renders hidden banner, without action buttons and without image 1`] = `
<View
  collapsable={false}
  style={
    Object {
      "shadowColor": "#000",
      "shadowOffset": Object {
        "height": 1,
        "width": 0,
      },
      "shadowOpacity": 0.15,
      "shadowRadius": 3,
    }
  }
>
  <View
    collapsable={false}
    style={
      Object {
        "shadowColor": "#000",
        "shadowOffset": Object {
          "height": 1,
          "width": 0,
        },
        "shadowOpacity": 0.3,
        "shadowRadius": 1,
      }
    }
  >
    <View
      collapsable={false}
      style={
        Object {
          "backgroundColor": "rgb(247, 243, 249)",
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "alignSelf": "center",
              "maxWidth": 960,
              "overflow": "hidden",
              "width": "100%",
            },
            undefined,
          ]
        }
      >
        <View
          collapsable={false}
          style={
            Object {
              "height": 0,
            }
          }
        />
        <View
          collapsable={false}
          onLayout={[Function]}
          style={
            Object {
              "opacity": 0,
              "position": "absolute",
              "top": 0,
              "transform": Array [
                Object {
                  "translateY": -0,
                },
              ],
              "width": "100%",
            }
          }
        >
          <View
            style={
              Object {
                "flexDirection": "row",
                "justifyContent": "flex-start",
                "marginBottom": 0,
                "marginHorizontal": 8,
                "marginTop": 16,
              }
            }
          >
            <Text
              accessibilityLiveRegion="none"
              accessibilityRole="alert"
              style={
                Array [
                  Object {
                    "color": "rgba(28, 27, 31, 1)",
                  },
                  Object {
                    "textAlign": "left",
                  },
                  Array [
                    Object {
                      "flex": 1,
                      "margin": 8,
                    },
                    Object {
                      "color": "rgba(28, 27, 31, 1)",
                    },
                  ],
                ]
              }
            >
              Two line text string with two actions. One to two lines is preferable on mobile.
            </Text>
          </View>
          <View
            style={
              Object {
                "flexDirection": "row",
                "justifyContent": "flex-end",
                "margin": 4,
              }
            }
          />
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`renders visible banner, with action buttons and with image 1`] = `
<View
  collapsable={false}
  style={
    Object {
      "shadowColor": "#000",
      "shadowOffset": Object {
        "height": 1,
        "width": 0,
      },
      "shadowOpacity": 0.15,
      "shadowRadius": 3,
    }
  }
>
  <View
    collapsable={false}
    style={
      Object {
        "shadowColor": "#000",
        "shadowOffset": Object {
          "height": 1,
          "width": 0,
        },
        "shadowOpacity": 0.3,
        "shadowRadius": 1,
      }
    }
  >
    <View
      collapsable={false}
      image={[Function]}
      style={
        Object {
          "backgroundColor": "rgb(247, 243, 249)",
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "alignSelf": "center",
              "maxWidth": 960,
              "overflow": "hidden",
              "width": "100%",
            },
            undefined,
          ]
        }
      >
        <View
          collapsable={false}
          style={
            Object {
              "height": 0,
            }
          }
        />
        <View
          collapsable={false}
          onLayout={[Function]}
          style={Object {}}
        >
          <View
            style={
              Object {
                "flexDirection": "row",
                "justifyContent": "flex-start",
                "marginBottom": 0,
                "marginHorizontal": 8,
                "marginTop": 16,
              }
            }
          >
            <Text
              accessibilityLiveRegion="polite"
              accessibilityRole="alert"
              style={
                Array [
                  Object {
                    "color": "rgba(28, 27, 31, 1)",
                  },
                  Object {
                    "textAlign": "left",
                  },
                  Array [
                    Object {
                      "flex": 1,
                      "margin": 8,
                    },
                    Object {
                      "color": "rgba(28, 27, 31, 1)",
                    },
                  ],
                ]
              }
            >
              Two line text string with two actions. One to two lines is preferable on mobile.
            </Text>
          </View>
          <View
            style={
              Object {
                "flexDirection": "row",
                "justifyContent": "flex-end",
                "margin": 4,
              }
            }
          >
            <View
              collapsable={false}
              style={
                Object {
                  "shadowColor": "#000",
                  "shadowOffset": Object {
                    "height": 0,
                    "width": 0,
                  },
                  "shadowOpacity": 0,
                  "shadowRadius": 0,
                }
              }
            >
              <View
                collapsable={false}
                style={
                  Object {
                    "shadowColor": "#000",
                    "shadowOffset": Object {
                      "height": 0,
                      "width": 0,
                    },
                    "shadowOpacity": 0,
                    "shadowRadius": 0,
                  }
                }
              >
                <View
                  collapsable={false}
                  style={
                    Object {
                      "backgroundColor": "transparent",
                      "borderColor": "transparent",
                      "borderRadius": 20,
                      "borderStyle": "solid",
                      "borderWidth": 0,
                      "margin": 4,
                      "minWidth": "auto",
                    }
                  }
                >
                  <View
                    accessibilityRole="button"
                    accessibilityState={
                      Object {
                        "disabled": false,
                      }
                    }
                    accessible={true}
                    focusable={true}
                    onClick={[Function]}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      Array [
                        Object {
                          "overflow": "hidden",
                        },
                        Object {
                          "borderRadius": 20,
                        },
                      ]
                    }
                  >
                    <View
                      style={
                        Array [
                          Object {
                            "alignItems": "center",
                            "flexDirection": "row",
                            "justifyContent": "center",
                          },
                          undefined,
                        ]
                      }
                    >
                      <Text
                        numberOfLines={1}
                        selectable={false}
                        style={
                          Array [
                            Object {
                              "color": "rgba(28, 27, 31, 1)",
                              "fontSize": 14,
                              "fontWeight": "500",
                              "letterSpacing": 0.1,
                              "lineHeight": 20,
                            },
                            Object {
                              "textAlign": "left",
                            },
                            Object {
                              "writingDirection": "ltr",
                            },
                            Array [
                              Object {
                                "marginHorizontal": 16,
                                "marginVertical": 9,
                                "textAlign": "center",
                              },
                              false,
                              Object {
                                "marginHorizontal": 12,
                              },
                              Object {
                                "marginHorizontal": 8,
                              },
                              false,
                              Object {
                                "color": "rgba(103, 80, 164, 1)",
                                "fontFamily": "System",
                                "fontSize": 14,
                                "fontWeight": "500",
                                "letterSpacing": 0.1,
                                "lineHeight": 20,
                              },
                              undefined,
                            ],
                          ]
                        }
                      >
                        first
                      </Text>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`renders visible banner, with action buttons and without image 1`] = `
<View
  collapsable={false}
  style={
    Object {
      "shadowColor": "#000",
      "shadowOffset": Object {
        "height": 1,
        "width": 0,
      },
      "shadowOpacity": 0.15,
      "shadowRadius": 3,
    }
  }
>
  <View
    collapsable={false}
    style={
      Object {
        "shadowColor": "#000",
        "shadowOffset": Object {
          "height": 1,
          "width": 0,
        },
        "shadowOpacity": 0.3,
        "shadowRadius": 1,
      }
    }
  >
    <View
      collapsable={false}
      style={
        Object {
          "backgroundColor": "rgb(247, 243, 249)",
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "alignSelf": "center",
              "maxWidth": 960,
              "overflow": "hidden",
              "width": "100%",
            },
            undefined,
          ]
        }
      >
        <View
          collapsable={false}
          style={
            Object {
              "height": 0,
            }
          }
        />
        <View
          collapsable={false}
          onLayout={[Function]}
          style={Object {}}
        >
          <View
            style={
              Object {
                "flexDirection": "row",
                "justifyContent": "flex-start",
                "marginBottom": 0,
                "marginHorizontal": 8,
                "marginTop": 16,
              }
            }
          >
            <Text
              accessibilityLiveRegion="polite"
              accessibilityRole="alert"
              style={
                Array [
                  Object {
                    "color": "rgba(28, 27, 31, 1)",
                  },
                  Object {
                    "textAlign": "left",
                  },
                  Array [
                    Object {
                      "flex": 1,
                      "margin": 8,
                    },
                    Object {
                      "color": "rgba(28, 27, 31, 1)",
                    },
                  ],
                ]
              }
            >
              Two line text string with two actions. One to two lines is preferable on mobile.
            </Text>
          </View>
          <View
            style={
              Object {
                "flexDirection": "row",
                "justifyContent": "flex-end",
                "margin": 4,
              }
            }
          >
            <View
              collapsable={false}
              style={
                Object {
                  "shadowColor": "#000",
                  "shadowOffset": Object {
                    "height": 0,
                    "width": 0,
                  },
                  "shadowOpacity": 0,
                  "shadowRadius": 0,
                }
              }
            >
              <View
                collapsable={false}
                style={
                  Object {
                    "shadowColor": "#000",
                    "shadowOffset": Object {
                      "height": 0,
                      "width": 0,
                    },
                    "shadowOpacity": 0,
                    "shadowRadius": 0,
                  }
                }
              >
                <View
                  collapsable={false}
                  style={
                    Object {
                      "backgroundColor": "transparent",
                      "borderColor": "transparent",
                      "borderRadius": 20,
                      "borderStyle": "solid",
                      "borderWidth": 0,
                      "margin": 4,
                      "minWidth": "auto",
                    }
                  }
                >
                  <View
                    accessibilityRole="button"
                    accessibilityState={
                      Object {
                        "disabled": false,
                      }
                    }
                    accessible={true}
                    focusable={true}
                    onClick={[Function]}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      Array [
                        Object {
                          "overflow": "hidden",
                        },
                        Object {
                          "borderRadius": 20,
                        },
                      ]
                    }
                  >
                    <View
                      style={
                        Array [
                          Object {
                            "alignItems": "center",
                            "flexDirection": "row",
                            "justifyContent": "center",
                          },
                          undefined,
                        ]
                      }
                    >
                      <Text
                        numberOfLines={1}
                        selectable={false}
                        style={
                          Array [
                            Object {
                              "color": "rgba(28, 27, 31, 1)",
                              "fontSize": 14,
                              "fontWeight": "500",
                              "letterSpacing": 0.1,
                              "lineHeight": 20,
                            },
                            Object {
                              "textAlign": "left",
                            },
                            Object {
                              "writingDirection": "ltr",
                            },
                            Array [
                              Object {
                                "marginHorizontal": 16,
                                "marginVertical": 9,
                                "textAlign": "center",
                              },
                              false,
                              Object {
                                "marginHorizontal": 12,
                              },
                              Object {
                                "marginHorizontal": 8,
                              },
                              false,
                              Object {
                                "color": "rgba(103, 80, 164, 1)",
                                "fontFamily": "System",
                                "fontSize": 14,
                                "fontWeight": "500",
                                "letterSpacing": 0.1,
                                "lineHeight": 20,
                              },
                              undefined,
                            ],
                          ]
                        }
                      >
                        first
                      </Text>
                    </View>
                  </View>
                </View>
              </View>
            </View>
            <View
              collapsable={false}
              style={
                Object {
                  "shadowColor": "#000",
                  "shadowOffset": Object {
                    "height": 0,
                    "width": 0,
                  },
                  "shadowOpacity": 0,
                  "shadowRadius": 0,
                }
              }
            >
              <View
                collapsable={false}
                style={
                  Object {
                    "shadowColor": "#000",
                    "shadowOffset": Object {
                      "height": 0,
                      "width": 0,
                    },
                    "shadowOpacity": 0,
                    "shadowRadius": 0,
                  }
                }
              >
                <View
                  collapsable={false}
                  style={
                    Object {
                      "backgroundColor": "transparent",
                      "borderColor": "transparent",
                      "borderRadius": 20,
                      "borderStyle": "solid",
                      "borderWidth": 0,
                      "margin": 4,
                      "minWidth": "auto",
                    }
                  }
                >
                  <View
                    accessibilityRole="button"
                    accessibilityState={
                      Object {
                        "disabled": false,
                      }
                    }
                    accessible={true}
                    focusable={true}
                    onClick={[Function]}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      Array [
                        Object {
                          "overflow": "hidden",
                        },
                        Object {
                          "borderRadius": 20,
                        },
                      ]
                    }
                  >
                    <View
                      style={
                        Array [
                          Object {
                            "alignItems": "center",
                            "flexDirection": "row",
                            "justifyContent": "center",
                          },
                          undefined,
                        ]
                      }
                    >
                      <Text
                        numberOfLines={1}
                        selectable={false}
                        style={
                          Array [
                            Object {
                              "color": "rgba(28, 27, 31, 1)",
                              "fontSize": 14,
                              "fontWeight": "500",
                              "letterSpacing": 0.1,
                              "lineHeight": 20,
                            },
                            Object {
                              "textAlign": "left",
                            },
                            Object {
                              "writingDirection": "ltr",
                            },
                            Array [
                              Object {
                                "marginHorizontal": 16,
                                "marginVertical": 9,
                                "textAlign": "center",
                              },
                              false,
                              Object {
                                "marginHorizontal": 12,
                              },
                              Object {
                                "marginHorizontal": 8,
                              },
                              false,
                              Object {
                                "color": "rgba(103, 80, 164, 1)",
                                "fontFamily": "System",
                                "fontSize": 14,
                                "fontWeight": "500",
                                "letterSpacing": 0.1,
                                "lineHeight": 20,
                              },
                              undefined,
                            ],
                          ]
                        }
                      >
                        second
                      </Text>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`renders visible banner, without action buttons and with image 1`] = `
<View
  collapsable={false}
  style={
    Object {
      "shadowColor": "#000",
      "shadowOffset": Object {
        "height": 1,
        "width": 0,
      },
      "shadowOpacity": 0.15,
      "shadowRadius": 3,
    }
  }
>
  <View
    collapsable={false}
    style={
      Object {
        "shadowColor": "#000",
        "shadowOffset": Object {
          "height": 1,
          "width": 0,
        },
        "shadowOpacity": 0.3,
        "shadowRadius": 1,
      }
    }
  >
    <View
      collapsable={false}
      image={[Function]}
      style={
        Object {
          "backgroundColor": "rgb(247, 243, 249)",
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "alignSelf": "center",
              "maxWidth": 960,
              "overflow": "hidden",
              "width": "100%",
            },
            undefined,
          ]
        }
      >
        <View
          collapsable={false}
          style={
            Object {
              "height": 0,
            }
          }
        />
        <View
          collapsable={false}
          onLayout={[Function]}
          style={Object {}}
        >
          <View
            style={
              Object {
                "flexDirection": "row",
                "justifyContent": "flex-start",
                "marginBottom": 0,
                "marginHorizontal": 8,
                "marginTop": 16,
              }
            }
          >
            <Text
              accessibilityLiveRegion="polite"
              accessibilityRole="alert"
              style={
                Array [
                  Object {
                    "color": "rgba(28, 27, 31, 1)",
                  },
                  Object {
                    "textAlign": "left",
                  },
                  Array [
                    Object {
                      "flex": 1,
                      "margin": 8,
                    },
                    Object {
                      "color": "rgba(28, 27, 31, 1)",
                    },
                  ],
                ]
              }
            >
              Two line text string with two actions. One to two lines is preferable on mobile.
            </Text>
          </View>
          <View
            style={
              Object {
                "flexDirection": "row",
                "justifyContent": "flex-end",
                "margin": 4,
              }
            }
          />
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`renders visible banner, without action buttons and without image 1`] = `
<View
  collapsable={false}
  style={
    Object {
      "shadowColor": "#000",
      "shadowOffset": Object {
        "height": 1,
        "width": 0,
      },
      "shadowOpacity": 0.15,
      "shadowRadius": 3,
    }
  }
>
  <View
    collapsable={false}
    style={
      Object {
        "shadowColor": "#000",
        "shadowOffset": Object {
          "height": 1,
          "width": 0,
        },
        "shadowOpacity": 0.3,
        "shadowRadius": 1,
      }
    }
  >
    <View
      collapsable={false}
      style={
        Object {
          "backgroundColor": "rgb(247, 243, 249)",
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "alignSelf": "center",
              "maxWidth": 960,
              "overflow": "hidden",
              "width": "100%",
            },
            undefined,
          ]
        }
      >
        <View
          collapsable={false}
          style={
            Object {
              "height": 0,
            }
          }
        />
        <View
          collapsable={false}
          onLayout={[Function]}
          style={Object {}}
        >
          <View
            style={
              Object {
                "flexDirection": "row",
                "justifyContent": "flex-start",
                "marginBottom": 0,
                "marginHorizontal": 8,
                "marginTop": 16,
              }
            }
          >
            <Text
              accessibilityLiveRegion="polite"
              accessibilityRole="alert"
              style={
                Array [
                  Object {
                    "color": "rgba(28, 27, 31, 1)",
                  },
                  Object {
                    "textAlign": "left",
                  },
                  Array [
                    Object {
                      "flex": 1,
                      "margin": 8,
                    },
                    Object {
                      "color": "rgba(28, 27, 31, 1)",
                    },
                  ],
                ]
              }
            >
              Two line text string with two actions. One to two lines is preferable on mobile.
            </Text>
          </View>
          <View
            style={
              Object {
                "flexDirection": "row",
                "justifyContent": "flex-end",
                "margin": 4,
              }
            }
          />
        </View>
      </View>
    </View>
  </View>
</View>
`;
